force-app/main/default/objects/ZenDesk_Login__c/ZenDesk_Login__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>ZenDesk_Login</label>
</CustomObject>