force-app/main/default/objects/ZenDesk_Login__c/fields/BaseURL__c.field-meta.xml
<CustomField>
    <fullName>BaseURL__c</fullName>
    <label>BaseURL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>