force-app/main/default/objects/ZenDesk_Login__c/fields/Return_To__c.field-meta.xml
<CustomField>
    <fullName>Return_To__c</fullName>
    <label>Return To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>