force-app/main/default/objects/ZenDesk_Login__c/fields/SSO_Input__c.field-meta.xml
<CustomField>
    <fullName>SSO_Input__c</fullName>
    <label>SSO_Input</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>